# ConfDex

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  conference_scraper_plan.md  docker-compose.caddy.yml  docker-compose.gpu.yml  docker-compose.https.yml  docker-compose.selfsigned.yml  docker-compose.yml  entrypoint.sh  paper5.json  pyproject.toml
.github/workflows/: docker.yml  publish.yml
conf-scraper/: README.md  paper4.json  summaries.csv  summaries2.csv  summaries3.csv
conf-scraper/src/confscraper/: browser.py  cli.py  http.py  llm.py  output.py
conf-scraper/src/confscraper/adapters/: __init__.py  base.py
conf-scraper/tests/: test_researchr.py
conf-scraper/tests/fixtures/: paper_no_abstract.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  jobs.ts  llm.ts  ollama.ts
frontend/src/components/: JobDetail.tsx  JobForm.tsx  JobList.tsx  JobProgress.tsx  LLMSelector.tsx  OllamaInstaller.tsx  ResultsTable.tsx
nginx/: default.conf.template  selfsigned.conf
scripts/: setup-server.sh
spaces/: app.py  packages.txt  requirements.txt
src/confscraper/: __main__.py  browser.py  categorize.py  cli.py  llm.py  models.py  output.py  pipeline.py
src/confscraper/adapters/: researchr.py
src/confscraper/web/: app.py  db.py  runner.py  serve.py  session.py
src/confscraper/web/routes/: auth.py  jobs.py  llm.py  ollama.py
tests/: test_api.py  test_categorize.py  test_db.py  test_pipeline.py  test_runner.py
tests/fixtures/: paper_detail.html  track_listing.html
