[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ConfDex"
version = "0.1.0"
description = "Scrape paper titles, authors, and abstracts from conference websites"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mustafa Assaf", email = "must.saf@gmail.com" }]
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3",
    "aiolimiter>=1.1",
    "tenacity>=8.2",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "playwright>=1.40",
    "litellm>=1.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
]

[project.scripts]
confscraper = "confscraper.cli:app"
confscraper-web = "confscraper.web.serve:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/confscraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
